--- a/frontend/src/app/projects/constructor/constructor.component.html
+++ b/frontend/src/app/projects/constructor/constructor.component.html
@@ -1,1 +1,181 @@
-<p>constructor works!</p>
+<div class="container">
+  <div id="createProject">
+    <br />
+    <header><h1>Crear un nuevo proyecto</h1></header>
+    <section>
+      <p id="info" class="mt-3">
+        Aqui puedes crear tu proyecto y ponerlo a disposici&oacute;n de un
+        proveedor
+      </p>
+    </section>
+  </div>
+  <div class="form-content">
+    <form
+      [formGroup]="createProject"
+      (ngSubmit)="onSubmit()"
+      id="createProjectForm"
+    >
+      <div class="input-group">
+        <div class="input-field">
+          <label for="project_name">Nombre del proyecto</label>
+          <br />
+          <i class="fa-solid fa-folder"></i>
+          <input
+            type="text"
+            id="project_name"
+            formControlName="project_name"
+            placeholder="Nombre del proyecto"
+            required
+          />
+          <div
+            *ngIf="
+              createProject.get('project_name')?.hasError('required') &&
+              createProject.get('project_name')?.touched
+            "
+          >
+            <div class="alert alert-danger">Este campo es requerido</div>
+          </div>
+          <div
+            *ngIf="createProject.get('project_name')?.hasError('project_name')"
+          >
+            <div class="alert alert-danger">
+              El nombre del proyecto no debe contener caracteres especiales
+              (solo n&uacute;meros y letras)
+            </div>
+          </div>
+        </div>
+
+        <div class="input-field">
+          <label for="initial_project_date">Fecha inicial del proyecto</label>
+          <br />
+          <i class="fa-regular fa-calendar-check"></i>
+          <input
+            type="date"
+            id="initial_project_date"
+            formControlName="initial_project_date"
+            placeholder="Fecha inicial del proyecto"
+            required
+          />
+          <div
+            *ngIf="
+              createProject
+                .get('initial_project_date')
+                ?.hasError('initial_project_date') &&
+              createProject.get('initial_project_date')?.touched
+            "
+          >
+            <div class="alert alert-danger">Este campo es requerido</div>
+          </div>
+        </div>
+
+        <div class="input-field">
+          <label for="final_project_date">Fecha final del proyecto</label>
+          <br />
+          <i class="fa-regular fa-calendar-xmark"></i>
+          <input
+            type="date"
+            id="final_project_date"
+            formControlName="final_project_date"
+            placeholder="Fecha inicial del proyecto"
+            required
+          />
+          <div
+            *ngIf="
+              createProject
+                .get('final_project_date')
+                ?.hasError('final_project_date') &&
+              createProject.get('final_project_date')?.touched
+            "
+          >
+            <div class="alert alert-danger">Este campo es requerido</div>
+          </div>
+        </div>
+
+        <div class="input-field">
+          <label for="images">Adjunta imágenes</label>
+          <br />
+          <i class="fa-solid fa-images"></i>
+          <input
+            type="file"
+            id="images"
+            formControlName="images"
+            placeholder="Nombre del proyecto"
+            multiple
+            accept="image/*"
+            (change)="handleImageInput($event)"
+          />
+          <div
+            *ngIf="
+              createProject.get('images')?.hasError('required') &&
+              createProject.get('images')?.touched
+            "
+          >
+            <div class="alert alert-danger">
+              Debes seleccionar al menos una imagen.
+            </div>
+          </div>
+        </div>
+
+        <div formArrayName="items_list">
+          <div
+            *ngFor="let item of projectItems.controls; let i = index"
+            [formGroupName]="i"
+          >
+            <div class="input-field">
+              <label for="itemName{{ i }}">Nombre del ítem</label>
+              <br />
+              <input
+                type="text"
+                id="itemName{{ i }}"
+                formControlName="item_name"
+                placeholder="Nombre del ítem"
+                required
+              />
+              <div
+                *ngIf="
+                  createProject.get('item_name')?.hasError('required') &&
+                  createProject.get('item_name')?.touched
+                "
+              >
+                <div class="alert alert-danger">Este campo es requerido</div>
+              </div>
+            </div>
+            <div class="input-field">
+              <label for="itemValue{{ i }}">Valor unitario</label>
+              <br />
+              <input
+                type="number"
+                id="itemValue{{ i }}"
+                formControlName="unit_value"
+                placeholder="Valor unitario"
+                required
+              />
+              <div
+                *ngIf="
+                  createProject.get('unit_value')?.hasError('numericError')
+                "
+              >
+                <div class="alert alert-danger">
+                  Solo se permiten números en este campo
+                </div>
+              </div>
+            </div>
+            <button
+              type="button"
+              class="eliminar-item"
+              (click)="removeProjectItem(i)"
+            >
+              Eliminar ítem
+            </button>
+          </div>
+        </div>
+
+        <button type="button" (click)="addProjectItem()">Agregar ítem</button>
+      </div>
+
+      <div class="btn-field">
+        <button id="btn-createProject" type="submit">Crear Proyecto</button>
+      </div>
+    </form>
+  </div>
+</div>
