--- a/frontend/src/app/projects/proveedor/proveedor.component.html
+++ b/frontend/src/app/projects/proveedor/proveedor.component.html
@@ -1,1 +1,25 @@
-<p>proveedor works!</p>
+<div class="container">
+  <div id="infoProject">
+    <br />
+    <header><h1>Lista de proyectos</h1></header>
+    <section>
+      <p id="info" class="mt-3">
+        Aqui puedes aplicar a los diferentes proyectos
+      </p>
+    </section>
+  </div>
+  <div class="card-container">
+    <div class="proveedor-card" *ngFor="let project of projectsData">
+      <h4>{{ project.project_name }}</h4>
+      <div *ngIf="project.items_list.length > 0">
+        <strong>Items List:</strong>
+        <ul>
+          <li *ngFor="let item of project.items_list">
+            {{ item.item_name }} - {{ item.unit_value }}
+          </li>
+        </ul>
+      </div>
+      <button class="apply-project">aplicar</button>
+    </div>
+  </div>
+</div>
