--- a/frontend/src/app/users/login/login.component.html
+++ b/frontend/src/app/users/login/login.component.html
@@ -13,7 +13,7 @@
     <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" id="registerForm">
       <div class="input-group">
         <div class="input-field">
-          <label for="namer">Por favor ingresa tu email</label>
+          <label for="name">Por favor ingresa tu email</label>
           <br />
           <i class="fa-solid fa-envelope"></i>
           <input
